--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.left{   
+.right{   
     display: flex; 
     gap: 30px;
 }
 .header,
-.left{
+.right{
     margin-left: 56px;
     margin-right: 8px;
     padding: 12px;
@@ -59,9 +59,79 @@ button{
     display: block; 
     margin-top: 10px;
     border-radius: 5px;
-    border: none;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px; 
 }
+
+h2{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: "extra-bold";
+    color: #1f2937;
+}
+.block2{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 52px;
+    padding: 100px;
+}
+.p-img{
+    border: 5px solid;
+    border-radius: 5px;
+    border-color: #3882f6;
+}
+.caption{
+    display: flex;
+    width: 150px;
+    text-align: center;
+    margin-left: 100px;
+    margin-top: 20px;
+}
+.block3{
+    background-color: #E5E7EB;
+    padding: 75px;
+}
+.quote{
+    font-size: 36px;
+    font-weight: 100;
+    color: #1f2937;
+    font-style: italic;
+    text-align: center;
+}
+.quote-credit{
+    font-weight: 700;
+    font-size: 24px;
+    text-align: end;
+}
+.block4{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #E5E7EB;
+    background-color: #3882f6;
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-bottom: 72px;
+    margin-top: 48px;
+    padding: 20px;
+    border-radius: 5px;
+}
+.call-button{
+    display: flex;
+    justify-content: flex-end;
+    border-color: #F9FAF8;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #E5E7EB;
+  }
